<resources>
    <string name="app_name">My student diary</string>
    <string name="syllabus_test_text">Hello syllabus fragment</string>
    <string name="statistic_test_text">Hello statistic fragment</string>
    <string name="main_test_text">Hello main fragment</string>
    <string name="stat">stat</string>
    <string name="main">main</string>
    <string name="syll">syll</string>
    <string name="title_activity_bottom_nav">bottomNav</string>
    <string name="title_home">Расписание</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_statistic">Статистика</string>
    <string name="title_syllabus">Учебный план</string>
    <string name="plus">+</string>
    <string name="add_task">Добавить задачу</string>
    <string name="add_lesson">Добавить занятие</string>
    <string name="syllabus">   Учебный план</string>
    <string name="delete_confirmation">Вы уверены, что хотите удалить предмет?</string>
    <string name="this_is_subject_activity">This is Subject Activity</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="addSubject">Добавить предмет</string>
    <string name="add">Добавить</string>
    <string name="enterSubjectName">Введите название предмета</string>
    <string name="selectFormOfControl">Выберите вид аттестации:</string>
    <string name="subject_name">Название предмета</string>
    <string name="place">Аудитория</string>
    <string name="_8_45_n_n10_20">8:45 \n - \n10:20</string>
    <string name="info">Введите описание</string>
    <string name="time">Время</string>
    <string name="exercise_add">Добавить задачу</string>
    <string name="exercise_adding">Введите задачу</string>
    <string-array name="month">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    <string-array name="form_of_control">
        <item>Экзамен</item>
        <item>Дифф. зачет</item>
        <item>Зачет</item>
    </string-array>

</resources>