<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/dialog_rec"
    android:orientation="vertical">
    <TextView
        android:id="@+id/deleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/delete_confirmation"
        android:textColor="@color/primary_text_color"
        android:textSize="17sp"
        android:gravity="center" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/nav_bar_color"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/nav_bar_color"
            android:textColor="@color/white"
            android:text="@string/delete"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>