<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:weightSum="0.506">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/statistic_fragment"
            android:name="mystudent.diary.view.main.fragments.StatisticFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/main_fragment"
            android:name="mystudent.diary.view.main.fragments.MainFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/syllabus_fragment"
            android:name="mystudent.diary.view.main.fragments.SyllabusFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/statistic_button"
                android:text="@string/stat"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_button"
                android:text="@string/main"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/syllabus_button"
                android:text="@string/syll"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>